--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
             })
             else if (lineId == 1006) data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
-                e.up.forEach((e, i) => {
-                    src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                e.up.forEach((e) => {
+                    src += '<image xlink:href="./images/up.png" x="' + (pos.x + 15) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
                 });
-                e.dn.forEach((e, i) => {
-                    if (i > 2) src += '<image xlink:href="./images/dn.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    else src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                e.dn.forEach((e) => {
+                    if (i < 3) src += '<image xlink:href="./images/up.png" x="' + (pos.x + 15) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                    else src += '<image xlink:href="./images/dn.png" x="' + (pos.x - 35) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
                 });
             })
             else data.data.forEach((e, i) => {
