--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             stroke-width: 2;
         }
         text {
-            font-size: 34px;
+            font-size: 32px;
             text-anchor: start;
             font-family: 'NanumGothic';
             text-anchor: start;
@@ -337,125 +337,126 @@
         const mapData = [];
         mapData[1001] = {
             color: '#0052A4',
-            height: 8100,
+            height: 8000,
             lines: [{
                 type: 'polyline',
-                data: '100,100 100,6500'
+                data: '50,50 50,6450'
             }, {
                 type: 'polyline',
-                data: '100,4500 150,4550 450,4550 500,4600 500,6500 450,6550 150,6550 100,6600 100,8000'
+                data: '50,4450 100,4500 400,4500 450,4550 450,6450 400,6500 100,6500 50,6550 50,7950'
             }, {
                 type: 'polyline',
-                data: '500,4800 450,4850 350,4850 300,4900'
+                data: '450,4750 400,4800 300,4800 250,4850'
             }, {
                 type: 'polyline',
-                data: '500,6100 450,6150 350,6150 300,6200'
+                data: '450,6050 400,6100 300,6100 250,6150'
             }],
             points: [
-                {x: 100, y: 100, sta: '연천'},  //경원선 시작
-                {x: 100, y: 200, sta: '전곡'},
-                {x: 100, y: 300, sta: '청산'},
-                {x: 100, y: 400, sta: '소요산'},
-                {x: 100, y: 500, sta: '동두천'},
-                {x: 100, y: 600, sta: '보산'},
-                {x: 100, y: 700, sta: '동두천중앙'},
-                {x: 100, y: 800, sta: '지행'},
-                {x: 100, y: 900, sta: '덕정'},
-                {x: 100, y: 1000, sta: '덕계'},
-                {x: 100, y: 1100, sta: '양주'},
-                {x: 100, y: 1200, sta: '녹양'},
-                {x: 100, y: 1300, sta: '가능'},
-                {x: 100, y: 1400, sta: '의정부'},
-                {x: 100, y: 1500, sta: '회룡'},
-                {x: 100, y: 1600, sta: '망월사'},
-                {x: 100, y: 1700, sta: '도봉산'},
-                {x: 100, y: 1800, sta: '도봉'},
-                {x: 100, y: 1900, sta: '방학'},
-                {x: 100, y: 2000, sta: '창동'},
-                {x: 100, y: 2100, sta: '녹천'},
-                {x: 100, y: 2200, sta: '월계'},
-                {x: 100, y: 2300, sta: '광운대'},
-                {x: 100, y: 2400, sta: '석계'},
-                {x: 100, y: 2500, sta: '신이문'},
-                {x: 100, y: 2600, sta: '외대앞'},
-                {x: 100, y: 2700, sta: '회기'},
-                {x: 100, y: 2800, sta: '청량리'}, //경원선&종로선 경계
-                {x: 100, y: 2900, sta: '제기동'},
-                {x: 100, y: 3000, sta: '신설동'},
-                {x: 100, y: 3100, sta: '동묘앞'},
-                {x: 100, y: 3200, sta: '동대문'},
-                {x: 100, y: 3300, sta: '종로5가'},
-                {x: 100, y: 3400, sta: '종로3가'},
-                {x: 100, y: 3500, sta: '종각'},
-                {x: 100, y: 3600, sta: '시청'},
-                {x: 100, y: 3700, sta: '서울'},
-                {x: 100, y: 3800, sta: '남영'},
-                {x: 100, y: 3900, sta: '용산'},
-                {x: 100, y: 4000, sta: '노량진'},
-                {x: 100, y: 4100, sta: '대방'},
-                {x: 100, y: 4200, sta: '신길'},
-                {x: 100, y: 4300, sta: '영등포'},
-                {x: 100, y: 4400, sta: '신도림'},
-                {x: 100, y: 4500, sta: '구로'}, //경인선 분기. 일단 경부선 따라감
-                {x: 500, y: 4600, sta: '가산디지털단지'},
-                {x: 500, y: 4700, sta: '독산'},
-                {x: 500, y: 4800, sta: '금천구청'},
-                {x: 500, y: 4900, sta: '석수'},
-                {x: 500, y: 5000, sta: '관악'},
-                {x: 500, y: 5100, sta: '안양'},
-                {x: 500, y: 5200, sta: '명학'},
-                {x: 500, y: 5300, sta: '금정'},
-                {x: 500, y: 5400, sta: '군포'},
-                {x: 500, y: 5500, sta: '당정'},
-                {x: 500, y: 5600, sta: '의왕'},
-                {x: 500, y: 5700, sta: '성균관대'},
-                {x: 500, y: 5800, sta: '화서'},
-                {x: 500, y: 5900, sta: '수원'},
-                {x: 500, y: 6000, sta: '세류'},
-                {x: 500, y: 6100, sta: '병점'},
-                {x: 500, y: 6200, sta: '세마'},
-                {x: 500, y: 6300, sta: '오산대'},
-                {x: 500, y: 6400, sta: '오산'},
-                {x: 500, y: 6500, sta: '진위'},
-                {x: 100, y: 6600, sta: '송탄'},
-                {x: 100, y: 6700, sta: '서정리'},
-                {x: 100, y: 6800, sta: '평택지제'},
-                {x: 100, y: 6900, sta: '평택'},
-                {x: 100, y: 7000, sta: '성환'},
-                {x: 100, y: 7100, sta: '직산'}, //경부선 끝
-                {x: 100, y: 7200, sta: '두정'}, //천안직결선
-                {x: 100, y: 7300, sta: '천안'}, //장항선 시작
-                {x: 100, y: 7400, sta: '봉명'},
-                {x: 100, y: 7500, sta: '쌍용'},
-                {x: 100, y: 7600, sta: '아산'},
-                {x: 100, y: 7700, sta: '탕정'},
-                {x: 100, y: 7800, sta: '배방'},
-                {x: 100, y: 7900, sta: '온양온천'},
-                {x: 100, y: 8000, sta: '신창'},
-                {x: 100, y: 4600, sta: '구일'}, //경인선 시작
-                {x: 100, y: 4700, sta: '개봉'},
-                {x: 100, y: 4800, sta: '오류동'},
-                {x: 100, y: 4900, sta: '온수'},
-                {x: 100, y: 5000, sta: '역곡'},
-                {x: 100, y: 5100, sta: '소사'},
-                {x: 100, y: 5200, sta: '부천'},
-                {x: 100, y: 5300, sta: '중동'},
-                {x: 100, y: 5400, sta: '송내'},
-                {x: 100, y: 5500, sta: '부개'},
-                {x: 100, y: 5600, sta: '부평'},
-                {x: 100, y: 5700, sta: '백운'},
-                {x: 100, y: 5800, sta: '동암'},
-                {x: 100, y: 5900, sta: '간석'},
-                {x: 100, y: 6000, sta: '주안'},
-                {x: 100, y: 6100, sta: '도화'},
-                {x: 100, y: 6200, sta: '제물포'},
-                {x: 100, y: 6300, sta: '도원'},
-                {x: 100, y: 6400, sta: '동인천'},
-                {x: 100, y: 6500, sta: '인천'}, //경인선 끝
-                {x: 300, y: 4900, sta: '광명'}, //경부고속선
-                {x: 300, y: 6200, sta: '서동탄'} //병점기지선
+                {x: 50, y: 100, sta: '연천'},  //경원선 시작
+                {x: 50, y: 200, sta: '전곡'},
+                {x: 50, y: 300, sta: '청산'},
+                {x: 50, y: 400, sta: '소요산'},
+                {x: 50, y: 500, sta: '동두천'},
+                {x: 50, y: 600, sta: '보산'},
+                {x: 50, y: 700, sta: '동두천중앙'},
+                {x: 50, y: 800, sta: '지행'},
+                {x: 50, y: 900, sta: '덕정'},
+                {x: 50, y: 1000, sta: '덕계'},
+                {x: 50, y: 1100, sta: '양주'},
+                {x: 50, y: 1200, sta: '녹양'},
+                {x: 50, y: 1300, sta: '가능'},
+                {x: 50, y: 1400, sta: '의정부'},
+                {x: 50, y: 1500, sta: '회룡'},
+                {x: 50, y: 1600, sta: '망월사'},
+                {x: 50, y: 1700, sta: '도봉산'},
+                {x: 50, y: 1800, sta: '도봉'},
+                {x: 50, y: 1900, sta: '방학'},
+                {x: 50, y: 2000, sta: '창동'},
+                {x: 50, y: 2100, sta: '녹천'},
+                {x: 50, y: 2200, sta: '월계'},
+                {x: 50, y: 2300, sta: '광운대'},
+                {x: 50, y: 2400, sta: '석계'},
+                {x: 50, y: 2500, sta: '신이문'},
+                {x: 50, y: 2600, sta: '외대앞'},
+                {x: 50, y: 2700, sta: '회기'},
+                {x: 50, y: 2800, sta: '청량리'}, //경원선&종로선 경계
+                {x: 50, y: 2900, sta: '제기동'},
+                {x: 50, y: 3000, sta: '신설동'},
+                {x: 50, y: 3100, sta: '동묘앞'},
+                {x: 50, y: 3200, sta: '동대문'},
+                {x: 50, y: 3300, sta: '종로5가'},
+                {x: 50, y: 3400, sta: '종로3가'},
+                {x: 50, y: 3500, sta: '종각'},
+                {x: 50, y: 3600, sta: '시청'},
+                {x: 50, y: 3700, sta: '서울'},
+                {x: 50, y: 3800, sta: '남영'},
+                {x: 50, y: 3900, sta: '용산'},
+                {x: 50, y: 4000, sta: '노량진'},
+                {x: 50, y: 4100, sta: '대방'},
+                {x: 50, y: 4200, sta: '신길'},
+                {x: 50, y: 4300, sta: '영등포'},
+                {x: 50, y: 4400, sta: '신도림'},
+                {x: 50, y: 4500, sta: '구로'}, //경인선 분기. 일단 경부선 따라감
+                {x: 450, y: 4600, sta: '가산디지털단지'},
+                {x: 450, y: 4700, sta: '독산'},
+                {x: 450, y: 4800, sta: '금천구청'},
+                {x: 450, y: 4900, sta: '석수'},
+                {x: 450, y: 5000, sta: '관악'},
+                {x: 450, y: 5100, sta: '안양'},
+                {x: 450, y: 5200, sta: '명학'},
+                {x: 450, y: 5300, sta: '금정'},
+                {x: 450, y: 5400, sta: '군포'},
+                {x: 450, y: 5500, sta: '당정'},
+                {x: 450, y: 5600, sta: '의왕'},
+                {x: 450, y: 5700, sta: '성균관대'},
+                {x: 450, y: 5800, sta: '화서'},
+                {x: 450, y: 5900, sta: '수원'},
+                {x: 450, y: 6000, sta: '세류'},
+                {x: 450, y: 6100, sta: '병점'},
+                {x: 450, y: 6200, sta: '세마'},
+                {x: 450, y: 6300, sta: '오산대'},
+                {x: 450, y: 6400, sta: '오산'},
+                {x: 450, y: 6500, sta: '진위'},
+                {x: 50, y: 6600, sta: '송탄'},
+                {x: 50, y: 6700, sta: '서정리'},
+                {x: 50, y: 6800, sta: '평택지제'},
+                {x: 50, y: 6900, sta: '평택'},
+                {x: 50, y: 7000, sta: '성환'},
+                {x: 50, y: 7100, sta: '직산'}, //경부선 끝
+                {x: 50, y: 7200, sta: '두정'}, //천안직결선
+                {x: 50, y: 7300, sta: '천안'}, //장항선 시작
+                {x: 50, y: 7400, sta: '봉명'},
+                {x: 50, y: 7500, sta: '쌍용'},
+                {x: 50, y: 7600, sta: '아산'},
+                {x: 50, y: 7700, sta: '탕정'},
+                {x: 50, y: 7800, sta: '배방'},
+                {x: 50, y: 7900, sta: '온양온천'},
+                {x: 50, y: 8000, sta: '신창'},
+                {x: 50, y: 4600, sta: '구일'}, //경인선 시작
+                {x: 50, y: 4700, sta: '개봉'},
+                {x: 50, y: 4800, sta: '오류동'},
+                {x: 50, y: 4900, sta: '온수'},
+                {x: 50, y: 5000, sta: '역곡'},
+                {x: 50, y: 5100, sta: '소사'},
+                {x: 50, y: 5200, sta: '부천'},
+                {x: 50, y: 5300, sta: '중동'},
+                {x: 50, y: 5400, sta: '송내'},
+                {x: 50, y: 5500, sta: '부개'},
+                {x: 50, y: 5600, sta: '부평'},
+                {x: 50, y: 5700, sta: '백운'},
+                {x: 50, y: 5800, sta: '동암'},
+                {x: 50, y: 5900, sta: '간석'},
+                {x: 50, y: 6000, sta: '주안'},
+                {x: 50, y: 6100, sta: '도화'},
+                {x: 50, y: 6200, sta: '제물포'},
+                {x: 50, y: 6300, sta: '도원'},
+                {x: 50, y: 6400, sta: '동인천'},
+                {x: 50, y: 6500, sta: '인천'}, //경인선 끝
+                {x: 250, y: 4900, sta: '광명'}, //경부고속선
+                {x: 250, y: 6200, sta: '서동탄'} //병점기지선
             ]
         };
+        mapData[1001].points.forEach((e, i) => mapData[1001].points[i].y -= 50); //임시 땜빵
         mapData[1002] = {
             color: '#00A84D',
             height: 3000,
