--- a/index.html
+++ b/index.html
@@ -456,74 +456,73 @@
                 {x: 250, y: 6200, sta: '서동탄'} //병점기지선
             ]
         };
-        mapData[1001].points.forEach((e, i) => mapData[1001].points[i].y -= 50); //임시 땜빵
         mapData[1002] = {
             color: '#00A84D',
-            height: 3000,
+            height: 2900,
             lines: [{ //성수지선
                 type: 'polyline',
-                data: '100,100 100,500'
+                data: '50,50 50,500'
             }, { //을지로순환선
                 type: 'polygon',
-                data: '100,500 100,2500 150,2550 300,2550 400,2650 450,2650 500,2600 500,500 450,450 150,450'
+                data: '50,450 50,2450 100,2500 250,2500 350,2600 400,2600 450,2550 450,450 400,400 100,400'
             }, { //신정지선
                 type: 'polyline',
-                data: '100,2500 100,2900'
+                data: '50,2450 50,2850'
             }],
             points: [
-                {x: 100, y: 500, sta: '성수'}, //을지로순환선 시작
-                {x: 500, y: 500, sta: '건대입구'},
-                {x: 500, y: 600, sta: '구의'},
-                {x: 500, y: 700, sta: '강변'},
-                {x: 500, y: 800, sta: '잠실나루'},
-                {x: 500, y: 900, sta: '잠실'},
-                {x: 500, y: 1000, sta: '잠실새내'},
-                {x: 500, y: 1100, sta: '종합운동장'},
-                {x: 500, y: 1200, sta: '삼성'},
-                {x: 500, y: 1300, sta: '선릉'},
-                {x: 500, y: 1400, sta: '역삼'},
-                {x: 500, y: 1500, sta: '강남'},
-                {x: 500, y: 1600, sta: '교대'},
-                {x: 500, y: 1700, sta: '서초'},
-                {x: 500, y: 1800, sta: '방배'},
-                {x: 500, y: 1900, sta: '사당'},
-                {x: 500, y: 2000, sta: '낙성대'},
-                {x: 500, y: 2100, sta: '서울대입구'},
-                {x: 500, y: 2200, sta: '봉천'},
-                {x: 500, y: 2300, sta: '신림'},
-                {x: 500, y: 2400, sta: '신대방'},
-                {x: 500, y: 2500, sta: '구로디지털단지'},
-                {x: 500, y: 2600, sta: '대림'},
-                {x: 100, y: 2500, sta: '신도림'},
-                {x: 100, y: 2400, sta: '문래'},
-                {x: 100, y: 2300, sta: '영등포구청'},
-                {x: 100, y: 2200, sta: '당산'},
-                {x: 100, y: 2100, sta: '합정'},
-                {x: 100, y: 2000, sta: '홍대입구'},
-                {x: 100, y: 1900, sta: '신촌'},
-                {x: 100, y: 1800, sta: '이대'},
-                {x: 100, y: 1700, sta: '아현'},
-                {x: 100, y: 1600, sta: '충정로'},
-                {x: 100, y: 1500, sta: '시청'},
-                {x: 100, y: 1400, sta: '을지로입구'},
-                {x: 100, y: 1300, sta: '을지로3가'},
-                {x: 100, y: 1200, sta: '을지로4가'},
-                {x: 100, y: 1100, sta: '동대문역사문화공원'},
-                {x: 100, y: 1000, sta: '신당'},
-                {x: 100, y: 900, sta: '상왕십리'},
-                {x: 100, y: 800, sta: '왕십리'},
-                {x: 100, y: 700, sta: '한양대'},
-                {x: 100, y: 600, sta: '뚝섬'}, //을지로순환선 끝
-                {x: 100, y: 470, sta: '(지선)'}, //성수역, 성수지선 시작
-                {x: 100, y: 400, sta: '용답'},
-                {x: 100, y: 300, sta: '신답'},
-                {x: 100, y: 200, sta: '용두'},
-                {x: 100, y: 100, sta: '신설동'}, //성수지선 끝
-                {x: 100, y: 2530, sta: '(지선)'}, //신도림역, 신정지선
-                {x: 100, y: 2600, sta: '도림천'},
-                {x: 100, y: 2700, sta: '양천구청'},
-                {x: 100, y: 2800, sta: '신정네거리'},
-                {x: 100, y: 2900, sta: '까치산'} //신정지선 끝
+                {x: 50, y: 500, sta: '성수'}, //을지로순환선 시작
+                {x: 450, y: 500, sta: '건대입구'},
+                {x: 450, y: 600, sta: '구의'},
+                {x: 450, y: 700, sta: '강변'},
+                {x: 450, y: 800, sta: '잠실나루'},
+                {x: 450, y: 900, sta: '잠실'},
+                {x: 450, y: 1000, sta: '잠실새내'},
+                {x: 450, y: 1100, sta: '종합운동장'},
+                {x: 450, y: 1200, sta: '삼성'},
+                {x: 450, y: 1300, sta: '선릉'},
+                {x: 450, y: 1400, sta: '역삼'},
+                {x: 450, y: 1500, sta: '강남'},
+                {x: 450, y: 1600, sta: '교대'},
+                {x: 450, y: 1700, sta: '서초'},
+                {x: 450, y: 1800, sta: '방배'},
+                {x: 450, y: 1900, sta: '사당'},
+                {x: 450, y: 2000, sta: '낙성대'},
+                {x: 450, y: 2100, sta: '서울대입구'},
+                {x: 450, y: 2200, sta: '봉천'},
+                {x: 450, y: 2300, sta: '신림'},
+                {x: 450, y: 2400, sta: '신대방'},
+                {x: 450, y: 2500, sta: '구로디지털단지'},
+                {x: 450, y: 2600, sta: '대림'},
+                {x: 50, y: 2500, sta: '신도림'},
+                {x: 50, y: 2400, sta: '문래'},
+                {x: 50, y: 2300, sta: '영등포구청'},
+                {x: 50, y: 2200, sta: '당산'},
+                {x: 50, y: 2100, sta: '합정'},
+                {x: 50, y: 2000, sta: '홍대입구'},
+                {x: 50, y: 1900, sta: '신촌'},
+                {x: 50, y: 1800, sta: '이대'},
+                {x: 50, y: 1700, sta: '아현'},
+                {x: 50, y: 1600, sta: '충정로'},
+                {x: 50, y: 1500, sta: '시청'},
+                {x: 50, y: 1400, sta: '을지로입구'},
+                {x: 50, y: 1300, sta: '을지로3가'},
+                {x: 50, y: 1200, sta: '을지로4가'},
+                {x: 50, y: 1100, sta: '동대문역사문화공원'},
+                {x: 50, y: 1000, sta: '신당'},
+                {x: 50, y: 900, sta: '상왕십리'},
+                {x: 50, y: 800, sta: '왕십리'},
+                {x: 50, y: 700, sta: '한양대'},
+                {x: 50, y: 600, sta: '뚝섬'}, //을지로순환선 끝
+                {x: 50, y: 470, sta: '(지선)'}, //성수역, 성수지선 시작
+                {x: 50, y: 400, sta: '용답'},
+                {x: 50, y: 300, sta: '신답'},
+                {x: 50, y: 200, sta: '용두'},
+                {x: 50, y: 100, sta: '신설동'}, //성수지선 끝
+                {x: 50, y: 2530, sta: '(지선)'}, //신도림역, 신정지선
+                {x: 50, y: 2600, sta: '도림천'},
+                {x: 50, y: 2700, sta: '양천구청'},
+                {x: 50, y: 2800, sta: '신정네거리'},
+                {x: 50, y: 2900, sta: '까치산'} //신정지선 끝
             ]
         };
         mapData[1006] = {
@@ -643,6 +642,10 @@
                 {x: 100, y: 5300, sta: '지평'} //중앙선 끝
             ]
         };
+
+        //임시 땜빵
+        mapData[1001].points.forEach((e, i) => mapData[1001].points[i].y -= 50);
+        mapData[1002].points.forEach((e, i) => mapData[1002].points[i].y -= 50);
 
     </script>
 </body>
