GyeongUi-JungAng Line fixed

--- a/index.html
+++ b/index.html
@@ -576,70 +576,73 @@
         };
         mapData[1101] = {
             color: '#77C4A3',
-            height: 5400,
+            height: 5600,
             lines: [{
                 type: 'polyline',
-                data: '100,100 100,5300'
+                data: '50,50 50,5550'
             }, {
                 type: 'polyline',
-                data: '100,2000 150,2050 450,2050 500,2100 500,2200'
+                data: '50,2250 100,2300 400,2300 450,2350 450,2450'
             }],
             points: [
-                {x: 100, y: 100, sta: '문산'}, //경의선 시작
-                {x: 100, y: 200, sta: '파주'},
-                {x: 100, y: 300, sta: '월롱'},
-                {x: 100, y: 400, sta: '금촌'},
-                {x: 100, y: 500, sta: '금릉'},
-                {x: 100, y: 600, sta: '운정'},
-                {x: 100, y: 700, sta: '야당'},
-                {x: 100, y: 800, sta: '탄현'},
-                {x: 100, y: 900, sta: '일산'},
-                {x: 100, y: 1000, sta: '풍산'},
-                {x: 100, y: 1100, sta: '백마'},
-                {x: 100, y: 1200, sta: '곡산'},
-                {x: 100, y: 1300, sta: '대곡'},
-                {x: 100, y: 1400, sta: '능곡'},
-                {x: 100, y: 1500, sta: '행신'},
-                {x: 100, y: 1600, sta: '강매'},
-                {x: 100, y: 1700, sta: '화전'},
-                {x: 100, y: 1800, sta: '수색'},
-                {x: 100, y: 1900, sta: '디지털미디어시티'},
-                {x: 100, y: 2000, sta: '가좌'}, //용산선 분기. 일단 경의선 따라감
-                {x: 500, y: 2100, sta: '신촌'},
-                {x: 500, y: 2200, sta: '서울역'}, //경의선 끝
-                {x: 100, y: 2100, sta: '홍대입구'}, //용산선 시작
-                {x: 100, y: 2200, sta: '서강대'},
-                {x: 100, y: 2300, sta: '공덕'},
-                {x: 100, y: 2400, sta: '효창공원앞'},
-                {x: 100, y: 2500, sta: '용산'}, //용산선 & 경원선 경계
-                {x: 100, y: 2600, sta: '이촌'},
-                {x: 100, y: 2700, sta: '서빙고'},
-                {x: 100, y: 2800, sta: '한남'},
-                {x: 100, y: 2900, sta: '옥수'},
-                {x: 100, y: 3000, sta: '응봉'},
-                {x: 100, y: 3100, sta: '왕십리'},
-                {x: 100, y: 3200, sta: '청량리'}, //경원선 & 중앙선 경계
-                {x: 100, y: 3300, sta: '회기'},
-                {x: 100, y: 3400, sta: '중랑'},
-                {x: 100, y: 3500, sta: '상봉'},
-                {x: 100, y: 3600, sta: '망우'},
-                {x: 100, y: 3700, sta: '앙원'},
-                {x: 100, y: 3800, sta: '구리'},
-                {x: 100, y: 3900, sta: '도농'},
-                {x: 100, y: 4000, sta: '양정'},
-                {x: 100, y: 4100, sta: '덕소'},
-                {x: 100, y: 4200, sta: '도심'},
-                {x: 100, y: 4300, sta: '팔당'},
-                {x: 100, y: 4400, sta: '운길산'},
-                {x: 100, y: 4500, sta: '양수'},
-                {x: 100, y: 4600, sta: '신원'},
-                {x: 100, y: 4700, sta: '국수'},
-                {x: 100, y: 4800, sta: '아신'},
-                {x: 100, y: 4900, sta: '오빈'},
-                {x: 100, y: 5000, sta: '양평'},
-                {x: 100, y: 5100, sta: '원덕'},
-                {x: 100, y: 5200, sta: '용문'},
-                {x: 100, y: 5300, sta: '지평'} //중앙선 끝
+                {x: 50, y: 50, sta: '도라산'}, //경의선 시작
+                {x: 50, y: 150, sta: '운천'},
+                {x: 50, y: 250, sta: '임진강'},
+                {x: 50, y: 350, sta: '문산'},
+                {x: 50, y: 450, sta: '파주'},
+                {x: 50, y: 550, sta: '월롱'},
+                {x: 50, y: 650, sta: '금촌'},
+                {x: 50, y: 750, sta: '금릉'},
+                {x: 50, y: 850, sta: '운정'},
+                {x: 50, y: 950, sta: '야당'},
+                {x: 50, y: 1050, sta: '탄현'},
+                {x: 50, y: 1150, sta: '일산'},
+                {x: 50, y: 1250, sta: '풍산'},
+                {x: 50, y: 1350, sta: '백마'},
+                {x: 50, y: 1450, sta: '곡산'},
+                {x: 50, y: 1550, sta: '대곡'},
+                {x: 50, y: 1650, sta: '능곡'},
+                {x: 50, y: 1750, sta: '행신'},
+                {x: 50, y: 1850, sta: '강매'},
+                {x: 50, y: 1950, sta: '화전'},
+                {x: 50, y: 2050, sta: '수색'},
+                {x: 50, y: 2150, sta: '디지털미디어시티'},
+                {x: 50, y: 2250, sta: '가좌'}, //용산선 분기. 일단 경의선 따라감
+                {x: 450, y: 2350, sta: '신촌'},
+                {x: 450, y: 2450, sta: '서울역'}, //경의선 끝
+                {x: 50, y: 2350, sta: '홍대입구'}, //용산선 시작
+                {x: 50, y: 2450, sta: '서강대'},
+                {x: 50, y: 2550, sta: '공덕'},
+                {x: 50, y: 2650, sta: '효창공원앞'},
+                {x: 50, y: 2750, sta: '용산'}, //용산선 & 경원선 경계
+                {x: 50, y: 2850, sta: '이촌'},
+                {x: 50, y: 2950, sta: '서빙고'},
+                {x: 50, y: 3050, sta: '한남'},
+                {x: 50, y: 3150, sta: '옥수'},
+                {x: 50, y: 3250, sta: '응봉'},
+                {x: 50, y: 3350, sta: '왕십리'},
+                {x: 50, y: 3450, sta: '청량리'}, //경원선 & 중앙선 경계
+                {x: 50, y: 3550, sta: '회기'},
+                {x: 50, y: 3650, sta: '중랑'},
+                {x: 50, y: 3750, sta: '상봉'},
+                {x: 50, y: 3850, sta: '망우'},
+                {x: 50, y: 3950, sta: '앙원'},
+                {x: 50, y: 4050, sta: '구리'},
+                {x: 50, y: 4150, sta: '도농'},
+                {x: 50, y: 4250, sta: '양정'},
+                {x: 50, y: 4350, sta: '덕소'},
+                {x: 50, y: 4450, sta: '도심'},
+                {x: 50, y: 4550, sta: '팔당'},
+                {x: 50, y: 4650, sta: '운길산'},
+                {x: 50, y: 4750, sta: '양수'},
+                {x: 50, y: 4850, sta: '신원'},
+                {x: 50, y: 4950, sta: '국수'},
+                {x: 50, y: 5050, sta: '아신'},
+                {x: 50, y: 5150, sta: '오빈'},
+                {x: 50, y: 5250, sta: '양평'},
+                {x: 50, y: 5350, sta: '원덕'},
+                {x: 50, y: 5450, sta: '용문'},
+                {x: 50, y: 5550, sta: '지평'} //중앙선 끝
             ]
         };
 
