--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         div.subway_map {
             width: 100%;
             height: auto;
-            max-width: 800px;
+        }
+        svg {
+            max-width: 720px;
         }
     </style>
 </head>
