--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
     <div class=body id=body>
         <div class="subway_map" id="subway_map">
             <!-- Subway Map will be created here via JS -->
+            <table>
+                <tr><td>메뉴에서 노선을 선택하세요</td></tr>
+            </table>
         </div>
         <hr>
         <p>© 2023-2024 Hyeon.js, All rights reserved.</p>
