line color added

--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@
                 colors['1501'] = '#759CCE';
                 colors['1502'] = '#F5A251';
                 colors['1601'] = '#9A6884';
+            } else if (region == 'busan') {
+                colors['1001'] = '#F06A00';
+                colors['1002'] = '#81BF48';
+                colors['1003'] = '#BB8C00';
+                colors['1004'] = '#217DCB';
             } else if (region == 'daegu') {
                 colors['1001'] = '#D93F5C';
                 colors['1002'] = '#00AA80';
